<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_Titulo">Asteroides</string>
    <string name="main_b_jugar">Jugar</string>
    <string name="main_b_config">Configurar</string>
    <string name="main_b_about">Acerca de</string>
    <string name="main_b_salir">Puntuación</string>
    
    
    <string name="texto_about">Este programa ha sido desarrollado como ejemplo en el curso de 
    Android para demostrar cómo se pueden lanzar nuevas actividades desde 
    la actividad principal. tel:3116028895 </string>

</resources>