<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip"
    tools:context=".Asteroides" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:text="@string/main_Titulo"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bJugar"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/main_b_jugar" 
        android:onClick="lanzarJuego"/>

    <Button
        android:id="@+id/bConfigurar"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/main_b_config" 
        android:onClick="lanzarPreferencias"/>

    <Button
        android:id="@+id/bAcercaDe"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:onClick="lanzarAcerceDe"
        android:text="@string/main_b_about" />

    <Button
        android:id="@+id/bPuntuacion"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/main_b_salir" 
        android:onClick="lanzarPuntuaciones"/>

</LinearLayout>